--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>ssm_pro_dao</module>
         <module>ssm_pro_domain</module>
         <module>ssm_pro_service</module>
-        <module>ssm_pro_utils</module>
+        <module>ssm_pro_util</module>
         <module>ssm_pro_web</module>
     </modules>
 
@@ -40,7 +40,7 @@
         <log4j.version>1.2.17</log4j.version>
         <mybatis.version>3.5.4</mybatis.version>
         <mysql.version>5.1.48</mysql.version>
-        <spring.security.version>5.3.2.RELEASE</spring.security.version>
+        <spring.security.version>5.3.3.RELEASE</spring.security.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
