--- a/ssm_pro_util/pom.xml
+++ b/ssm_pro_util/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ssm_pro_utils</artifactId>
+    <artifactId>ssm_pro_util</artifactId>
 
 
 </project>
